--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "test": "jest"
+    "build": "babel src -d dist",
+    "start": "npm run build && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^20.0.2",
     "commander": "^12.0.0",
-    "dotenv": "^16.4.4"
+    "dotenv": "^16.4.4",
+    "ink": "^5.1.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.0",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
     "jest": "^29.7.0"
   }
 }
