--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "babel src -d dist",
-    "start": "yarn build && node dist/index.js"
+    "clean": "rm -rf dist",
+    "build": "yarn clean && swc src -d dist",
+    "start": "yarn build && node dist/index.js",
+    "dev": "yarn build && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,10 +20,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.0",
-    "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-react": "^7.23.3",
-    "jest": "^29.7.0"
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.107"
   }
 }
