--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "gh-prstuck",
   "version": "1.0.0",
-  "description": "GitHub PR Management Tool - GitHub CLI Extension",
-  "main": "src/index.js",
+  "description": "GitHub PR Management Tool",
+  "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "gh-prstuck": "./dist/index.js"
+    "prstuck": "./dist/index.js"
   },
   "scripts": {
     "clean": "rm -rf dist",
     "build": "yarn clean && swc src -d dist",
     "start": "yarn build && node dist/index.js",
     "dev": "yarn build && node dist/index.js",
-    "postinstall": "gh extension install --force ."
+    "prepublishOnly": "yarn build",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "yarn build && changeset publish"
   },
+  "keywords": [
+    "github",
+    "pull-request",
+    "cli",
+    "management"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -24,7 +33,11 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@swc/cli": "^0.1.63",
     "@swc/core": "^1.3.107"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
