--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@octokit/graphql": "^8.2.1",
     "@octokit/rest": "^20.0.2",
     "commander": "^12.0.0",
     "dotenv": "^16.4.4",
